--- a/writing/nips_cog_insp_AI/lampinen_one_shot_words.tex
+++ b/writing/nips_cog_insp_AI/lampinen_one_shot_words.tex
@@ -21,17 +21,7 @@
 \usepackage{nicefrac}       % compact symbols for 1/2, etc.
 \usepackage{microtype}      % microtypography
 
-\title{The Jabberwocky: One-shot learning of word embeddings}
-
-% The \author macro works with any number of authors. There are two
-% commands used to separate the names and addresses of multiple
-% authors: \And and \AND.
-%
-% Using \And between authors leaves it to LaTeX to determine where to
-% break the lines. Using \AND forces a line break at that point. So,
-% if LaTeX puts 3 of 4 authors names on the first line, and the last
-% on the second line, try using \AND instead of \And before the third
-% author name.
+\title{The Jabberwocky: One-shot and few-shot learning of word embeddings}
 
 \author{
   Andrew K. Lampinen\\
@@ -52,7 +42,9 @@
 \maketitle
 
 \begin{abstract}
+Standard deep learning systems require thousands or millions of examples to learn a concept, and cannot integrate new concepts easily. By contrast, humans have an incredible ability to do one-shot or few-shot learning. For instance, from just hearing a word used in a sentence, humans can infer a great deal about its semantics, by leveraging what the syntax and semantics of the surrounding words tells us. Here, we suggest a simple technique by which deep recurrent networks can similarly exploit their prior knowledge to learn a useful representation for a new word from little data. This could be used for allowing machine learning systems to learn continually from new words they encounter. 
 \end{abstract}
 
+\section{Introduction}
 
 \end{document}
